<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image"
    tools:context=".Controlers.Auth.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="437dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="90dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/lavender_border"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="8dp"
            android:autofillHints=""
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/lavender_border"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar"/>

        <TextView
            android:id="@+id/signupRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:padding="8dp"
            android:text="@string/not_yet_registered_signup"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
